--- a/core/pom.xml
+++ b/core/pom.xml
@@ -12,5 +12,20 @@
     <artifactId>sphinx-core</artifactId>
     <name>Sphinx Core</name>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.core</groupId>
+            <artifactId>arquillian-core-spi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.test</groupId>
+            <artifactId>arquillian-test-spi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.container</groupId>
+            <artifactId>arquillian-container-test-spi</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
