--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,6 @@
     <modules>
         <module>build</module>
         <module>core</module>
-        <module>junit</module>
-        <module>testng</module>
-        <module>bom</module>
     </modules>
 
     <properties>
@@ -37,7 +34,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <version.org.jboss.sphinx.sphinx-bom>1.0.3.Final</version.org.jboss.sphinx.sphinx-bom>
+        <version.org.jboss.arquillian.arquillian-bom>1.0.3.Final</version.org.jboss.arquillian.arquillian-bom>
     </properties>
 
     <dependencyManagement>
