--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,17 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>sphinx</artifactId>
-        <groupId>io.machinecode</groupId>
+        <artifactId>sphinx-parent</artifactId>
+        <groupId>io.machinecode.sphinx</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>io.machinecode.sphinx</groupId>
     <artifactId>sphinx-core</artifactId>
     <name>Sphinx Core</name>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.core</groupId>
             <artifactId>arquillian-core-spi</artifactId>
