Add example project

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <modules>
         <module>build</module>
         <module>core</module>
+        <module>example</module>
     </modules>
 
     <properties>
