--- a/core/pom.xml
+++ b/core/pom.xml
@@ -9,11 +9,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.machinecode.sphinx</groupId>
     <artifactId>sphinx-core</artifactId>
     <name>Sphinx Core</name>
 
     <dependencies>
+        <dependency>
+            <groupId>io.machinecode.sphinx</groupId>
+            <artifactId>sphinx-browser</artifactId>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.browserstack</groupId>
+            <artifactId>tunnel</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.core</groupId>
             <artifactId>arquillian-core-spi</artifactId>
