--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>io.machinecode.sphinx</groupId>
     <artifactId>sphinx-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0.Final</version>
     <packaging>pom</packaging>
 
     <name>Sphinx</name>
