--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.machinecode</groupId>
         <artifactId>machinecode-parent-pom</artifactId>
-        <version>1.0.1.Final</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -36,8 +36,6 @@
         <version.org.jboss.arquillian.arquillian-bom>1.0.3.Final</version.org.jboss.arquillian.arquillian-bom>
         <version.org.jboss.logging.jboss-logging>3.1.2.GA</version.org.jboss.logging.jboss-logging>
         <version.org.jboss.spec.jboss-javaee-6.0>2.0.0.Final</version.org.jboss.spec.jboss-javaee-6.0>
-
-        <version.org.apache.maven.plugins.maven-release-plugin>2.4.1</version.org.apache.maven.plugins.maven-release-plugin>
     </properties>
 
     <dependencyManagement>
@@ -63,25 +61,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-            </plugin>
-        </plugins>
-
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-release-plugin</artifactId>
-                    <version>${version.org.apache.maven.plugins.maven-release-plugin}</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
 
     <distributionManagement>
         <repository>
